tests/ui/consts/promote-not.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:9:50
   |
LL | static mut TEST1: Option<&mut [i32]> = Some(&mut [1, 2, 3]);
   |                                        ----------^^^^^^^^^-
   |                                        |         |        |
   |                                        |         |        temporary value is freed at the end of this statement
   |                                        |         creates a temporary value which is freed while still in use
   |                                        using this value as a static requires that borrow lasts for `'static`

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:12:18
   |
LL |     let x = &mut [1,2,3];
   |                  ^^^^^^^ creates a temporary value which is freed while still in use
LL |     x
   |     - using this value as a static requires that borrow lasts for `'static`
LL | };
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:34:29
   |
LL |     let _x: &'static i32 = &unsafe { U { x: 0 }.x };
   |             ------------    ^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
   |             |
   |             type annotation requires that borrow lasts for `'static`
LL | };
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:40:29
   |
LL |     let _val: &'static _ = &(Cell::new(1), 2).1;
   |               ----------    ^^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
LL | };
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:21:32
   |
LL |         let _x: &'static () = &foo();
   |                 -----------    ^^^^^ creates a temporary value which is freed while still in use
   |                 |
   |                 type annotation requires that borrow lasts for `'static`
LL |     }
   |     - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:29:29
   |
LL |     let _x: &'static i32 = &unsafe { U { x: 0 }.x };
   |             ------------    ^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
   |             |
   |             type annotation requires that borrow lasts for `'static`
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:47:29
   |
LL |     let _val: &'static _ = &(Cell::new(1), 2).0;
   |               ----------    ^^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:48:29
   |
LL |     let _val: &'static _ = &(Cell::new(1), 2).1;
   |               ----------    ^^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:51:29
   |
LL |     let _val: &'static _ = &(1/0);
   |               ----------    ^^^^^ creates a temporary value which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:52:29
   |
LL |     let _val: &'static _ = &(1/(1-1));
   |               ----------    ^^^^^^^^^ creates a temporary value which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:53:29
   |
LL |     let _val: &'static _ = &((1+1)/(1-1));
   |               ----------    ^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:54:29
   |
LL |     let _val: &'static _ = &(i32::MIN/-1);
   |               ----------    ^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:55:29
   |
LL |     let _val: &'static _ = &(i32::MIN/(0-1));
   |               ----------    ^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:56:29
   |
LL |     let _val: &'static _ = &(-128i8/-1);
   |               ----------    ^^^^^^^^^^^ creates a temporary value which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:57:29
   |
LL |     let _val: &'static _ = &(1%0);
   |               ----------    ^^^^^ creates a temporary value which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:58:29
   |
LL |     let _val: &'static _ = &(1%(1-1));
   |               ----------    ^^^^^^^^^ creates a temporary value which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:59:29
   |
LL |     let _val: &'static _ = &([1,2,3][4]+1);
   |               ----------    ^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:62:29
   |
LL |     let _val: &'static _ = &TEST_DROP;
   |               ----------    ^^^^^^^^^ creates a temporary value which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:64:29
   |
LL |     let _val: &'static _ = &&TEST_DROP;
   |               ----------    ^^^^^^^^^^ creates a temporary value which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:64:30
   |
LL |     let _val: &'static _ = &&TEST_DROP;
   |               ----------     ^^^^^^^^^ creates a temporary value which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:67:29
   |
LL |     let _val: &'static _ = &(&TEST_DROP,);
   |               ----------    ^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:67:31
   |
LL |     let _val: &'static _ = &(&TEST_DROP,);
   |               ----------      ^^^^^^^^^ creates a temporary value which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:70:29
   |
LL |     let _val: &'static _ = &[&TEST_DROP; 1];
   |               ----------    ^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:70:31
   |
LL |     let _val: &'static _ = &[&TEST_DROP; 1];
   |               ----------      ^^^^^^^^^    - temporary value is freed at the end of this statement
   |               |               |
   |               |               creates a temporary value which is freed while still in use
   |               type annotation requires that borrow lasts for `'static`

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:79:26
   |
LL |     let x: &'static _ = &UnionWithCell { f1: 0 };
   |            ----------    ^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
LL |
LL | }
   | - temporary value is freed at the end of this statement

error: aborting due to 25 previous errors

For more information about this error, try `rustc --explain E0716`.
